home-k8s/hass/overlays/prod/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-access-to-local-resources
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        # host: zibgee gateway
        - ipBlock:
            cidr: 172.20.4.19/32
        # host: home-k8s01
        - ipBlock:
            cidr: 172.20.3.20/32
        # host: home-srv02
        - ipBlock:
            cidr: 172.20.4.116/32
        # host: router
        - ipBlock:
            cidr: 172.20.4.1/32
        # network: home-iot
        - ipBlock:
            cidr: 172.20.3.0/24
